@@ -2,6 +2,7 @@ package uk.ac.ebi.ait.filecontentvalidatorservice.utils;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -37,7 +38,7 @@ public class ReportTester {
 
     private static String readFile(Path file) {
         try {
-            return Files.readString(file);
+            return new String (Files.readAllBytes(file), StandardCharsets.UTF_8);
         }
         catch (IOException ex) {
             throw new RuntimeException(ex);
